ajustes en pantalla matricula

--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/editar.xhtml
@@ -18,7 +18,9 @@
         <div class="EmptyBox5"></div>
         <p:panel>
             <h:form enctype="multipart/form-data" >
-                
+                <p:dialog widgetVar="dlgAyuda1" modal="true" appendTo="@(body)" header="Ayuda">
+                    <p:outputLabel value="Esta ayuda sirve un monton Modifica"/>
+                </p:dialog>
             </h:form>
         </p:panel>
     </ui:define>
