--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAlumnos/expediente/crear.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAlumnos/expediente/crear.xhtml
@@ -34,48 +34,49 @@
                     </p:fileUpload>
                 </h:panelGrid>
                 <div class="EmptyBox20"></div>
+                <p:focus context="p1"/>
                 <p:panelGrid columns="4" class="Container100 Responsive" id="p1">
                     <p:outputLabel for="primNombreNuevo" value="Primer Nombre: " class=" Responsive"  ></p:outputLabel>
-                    <p:inputText class="Container100" id="primNombreNuevo"  value="#{gestionarAlumnosController.alumnoNuevo.alPrimNombre}" maxlength="#{nombreUtils.nombreMax}" required="true" requiredMessage="Debe ingresar Primer Nombre"></p:inputText>
+                    <p:inputText tabindex="1" class="Container100" id="primNombreNuevo"  value="#{gestionarAlumnosController.alumnoNuevo.alPrimNombre}" maxlength="#{nombreUtils.nombreMax}" required="true" requiredMessage="Debe ingresar Primer Nombre"></p:inputText>
                     <p:outputLabel for="segNombreNuevo"  value="Segundo Nombre: " class=" Responsive"></p:outputLabel>
-                    <p:inputText class="Container100" id="segNombreNuevo" value="#{gestionarAlumnosController.alumnoNuevo.alSeguNombre}" maxlength="#{nombreUtils.nombreMax}"></p:inputText>
+                    <p:inputText tabindex="2" class="Container100" id="segNombreNuevo" value="#{gestionarAlumnosController.alumnoNuevo.alSeguNombre}" maxlength="#{nombreUtils.nombreMax}"></p:inputText>
                     <p:outputLabel for="tercNombreNuevo" value="Tercer Nombre: " class=" Responsive"></p:outputLabel>
-                    <p:inputText class="Container100" id="tercNombreNuevo" value="#{gestionarAlumnosController.alumnoNuevo.alTercNombre}" maxlength="#{nombreUtils.nombreMax}"></p:inputText>
+                    <p:inputText tabindex="3" class="Container100" id="tercNombreNuevo" value="#{gestionarAlumnosController.alumnoNuevo.alTercNombre}" maxlength="#{nombreUtils.nombreMax}"></p:inputText>
                     <p:outputLabel for="primApeNuevo" value="Primer Apellido: " class=" Responsive"></p:outputLabel>
-                    <p:inputText class="Container100" id="primApeNuevo" value="#{gestionarAlumnosController.alumnoNuevo.alPrimApe}" maxlength="#{nombreUtils.apellidoMax}" required="true" requiredMessage="Debe ingresar Primer Apellido"></p:inputText>
+                    <p:inputText tabindex="4" class="Container100" id="primApeNuevo" value="#{gestionarAlumnosController.alumnoNuevo.alPrimApe}" maxlength="#{nombreUtils.apellidoMax}" required="true" requiredMessage="Debe ingresar Primer Apellido"></p:inputText>
                     <p:outputLabel for="segApeNuevo" value="Segundo Apellido: " class=" Responsive"></p:outputLabel>
-                    <p:inputText class="Container100" id="segApeNuevo" value="#{gestionarAlumnosController.alumnoNuevo.alSeguApe}" maxlength="#{nombreUtils.apellidoMax}"></p:inputText>
+                    <p:inputText tabindex="5" class="Container100" id="segApeNuevo" value="#{gestionarAlumnosController.alumnoNuevo.alSeguApe}" maxlength="#{nombreUtils.apellidoMax}"></p:inputText>
                     <p:outputLabel for="tercApeNuevo" value="Tercer Apellido: " class=" Responsive"></p:outputLabel>
-                    <p:inputText class="Container100" id="tercApeNuevo" value="#{gestionarAlumnosController.alumnoNuevo.alTercApe}" maxlength="#{nombreUtils.apellidoMax}"></p:inputText>
+                    <p:inputText tabindex="6" class="Container100" id="tercApeNuevo" value="#{gestionarAlumnosController.alumnoNuevo.alTercApe}" maxlength="#{nombreUtils.apellidoMax}"></p:inputText>
                     <p:outputLabel for="fechNacimNuevo" value="Fecha de Nacimiento: " class=" Responsive"></p:outputLabel>
-                    <p:calendar class="Container100" id="fechNacimNuevo" value="#{gestionarAlumnosController.alumnoNuevo.alFechaNacimiento}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha de nacimiento" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true"></p:calendar>
+                    <p:calendar tabindex="7" class="Container100" id="fechNacimNuevo" value="#{gestionarAlumnosController.alumnoNuevo.alFechaNacimiento}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha de nacimiento" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true"></p:calendar>
                     <p:outputLabel for="emailNuevo" value="Correo electrónico: " class=" Responsive"></p:outputLabel>
-                    <p:inputText class="Container100" id="emailNuevo" type="email" value="#{gestionarAlumnosController.alumnoNuevo.alCorreo}"></p:inputText>
+                    <p:inputText tabindex="8" class="Container100" id="emailNuevo" type="email" value="#{gestionarAlumnosController.alumnoNuevo.alCorreo}"></p:inputText>
                     <p:outputLabel for="telefonoNuevo" value="Teléfono: " class=" Responsive"></p:outputLabel>
-                    <p:inputMask class="Container100" id="telefonoNuevo" mask="9999-9999" value="#{gestionarAlumnosController.alumnoNuevo.alTelefonoEm1}"  required="true" requiredMessage="Debe ingresar telÃ©fono"></p:inputMask>
+                    <p:inputMask tabindex="9" class="Container100" id="telefonoNuevo" mask="9999-9999" value="#{gestionarAlumnosController.alumnoNuevo.alTelefonoEm1}"  required="true" requiredMessage="Debe ingresar telÃ©fono"></p:inputMask>
                     <p:outputLabel for="celularNuevo" value="Celular: " class=" Responsive"></p:outputLabel>
-                    <p:inputMask class="Container100" id="celularNuevo" mask="9999-9999" value="#{gestionarAlumnosController.alumnoNuevo.alTelefonoEm2}"></p:inputMask>
+                    <p:inputMask tabindex="10" class="Container100" id="celularNuevo" mask="9999-9999" value="#{gestionarAlumnosController.alumnoNuevo.alTelefonoEm2}"></p:inputMask>
                     <p:outputLabel for="direccion" value="Dirección: " class=" Responsive"></p:outputLabel>
-                    <p:inputTextarea class="Container100" id="direccion" value="#{gestionarAlumnosController.alumnoNuevo.alDireccion}"></p:inputTextarea>
+                    <p:inputTextarea tabindex="11" class="Container100" id="direccion" value="#{gestionarAlumnosController.alumnoNuevo.alDireccion}"></p:inputTextarea>
                 </p:panelGrid>
                 <div class="EmptyBox20"></div>
                 <div class="Container100">
-                    <p:commandButton value="Guardar" action="#{gestionarAlumnosController.guardar()}" update="p1" />
+                    <p:commandButton tabindex="12" value="Guardar" action="#{gestionarAlumnosController.guardar()}" update="p1" />
                     <p:commandButton value="Limpiar" immediate="true">
                         <p:ajax update="p1,archivo,fotoSubida" resetValues="true" />
                     </p:commandButton>
                     <p:commandButton value="Cancelar" immediate="true">
                         <p:ajax update="p1,archivo,fotoSubida" resetValues="true" listener="#{gestionarAlumnosController.setIndexMenu(0)}"/>
                     </p:commandButton>
-                    <div class="EmptyBox20"></div>
-                    <p:splitButton value="Otras Opciones" action="#">
-                        <p:menuitem value="Gestionar Docentes">    
+                    <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
+                    <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
+                        <p:menuitem value="Gestionar Docentes" >    
                         </p:menuitem>
                         <p:menuitem value="Gestionar Alumnos">    
                         </p:menuitem>
                         <p:menuitem value="Gestionar Cursos">    
                         </p:menuitem>
-                    </p:splitButton>            
+                    </p:tieredMenu>           
                 </div>
             </h:form>
         </p:panel>
