--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionArchivosMultimedia/ver.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionArchivosMultimedia/ver.xhtml
@@ -43,20 +43,17 @@
                 <p:outputLabel value="Archivo: " class="Container100 Responsive"></p:outputLabel>
                 <c:choose>
                     <c:when test="#{gestionArchivoMultimediaController.ver.arTipo=='I'}">
-                        <p:graphicImage value="#{gestionArchivoMultimediaController.archivoVer}" class="Container50" cache="false" ></p:graphicImage>
+                        <p:graphicImage name="#{copiaArchivos.multimediaBaseUrl}/#{gestionArchivoMultimediaController.ver.arRuta}"  class="Container50" cache="false"></p:graphicImage>
                     </c:when>
                     <c:when test="#{gestionArchivoMultimediaController.ver.arTipo=='A'}">
-                        <p:media value="#{gestionArchivoMultimediaController.archivoVer}" class="Container50" player="quicktime" cache="false">
-                            <f:param name="autoPlay" value="true" />
-                        </p:media>
+                        <audio controls="true">
+                            <source src="#{copiaArchivos.contexto}#{copiaArchivos.relativeResourcesUrl}#{gestionArchivoMultimediaController.ver.arRuta}?unico=#{dateUtils.time}" type="audio/mpeg" />
+                        </audio>
                     </c:when>
                     <c:otherwise>
-                        <p:media value="#{gestionArchivoMultimediaController.archivoVer}" class="Container50" player="quicktime" cache="false" height="240" width="320">
-                            <f:param name="autoPlay" value="true" />
-                        </p:media>
-                        <!--                        <video height="180" width="300" id="ourvideo" controls="true">
-                                                    <source src="/SIENI-web/faces/javax.faces.resource/dynamiccontent.properties?ln=primefaces&amp;pfdrid=x6WxIRb5PgOzxPKUMtn0oLN0D4Kl84TadcGXgzweDy%2FLBJg1AysNmRUNoYaTYKIZlXyShbLlRRs%3D&amp;pfdrt=sc&amp;pfdrid_c=true;time=#{dateUtils.time}"></source>
-                                                </video>-->
+                        <video controls="true" width="640" height="480">
+                            <source src="#{copiaArchivos.contexto}#{copiaArchivos.relativeResourcesUrl}#{gestionArchivoMultimediaController.ver.arRuta}?unico=#{dateUtils.time}" type="video/mp4" />
+                        </video>
                     </c:otherwise>
                 </c:choose>
                 <div class="EmptyBox20"></div>
