--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/ver.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/ver.xhtml
@@ -7,8 +7,8 @@
     <ui:define name="breadCrumb">
         <p:breadCrumb class="Container90">
             <p:menuitem value="Home" url="/"/>
-            <p:menuitem value="Gestionar M<atriculas" url="#{siteUrls.gestionAnioEscolar}"/>
-            <p:menuitem value="Consulta de Matriculas"></p:menuitem>
+            <p:menuitem value="Gestionar Matriculas" url="#{siteUrls.gestionAnioEscolar}"/>
+            <p:menuitem value="Consulta de Matriculas"/>
             <p:separator />
         </p:breadCrumb>
         <i class="icon-question Fs25 Red Container2 ui-breadcrumb" style="cursor: pointer;" onclick="PF('dlgAyuda#{gestionMatriculaController.indexMenu}').show();"></i>
@@ -17,7 +17,38 @@
         <div class="EmptyBox5"></div>
         <p:panel>
             <h:form id="consultaForm">
-                
+                <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
+
+                </p:dialog>
+
+
+
+                <div class="EmptyBox20"></div>
+                <p:panelGrid columns="2" class="Container50 Responsive" id="p1">
+                    <p:outputLabel for="carnet" value="Carnet: " class=" Responsive"></p:outputLabel>
+                    <p:inputMask id="carnet" mask="AA999999" value="#{gestionMatriculaController.matriculaNuevo.mtCarnet}"></p:inputMask>
+                    <p:outputLabel for="nombre" value="Nombre: " class=" Responsive"></p:outputLabel>
+                    <p:selectOneMenu id="nombre" filter="true" filterMatchMode="contains" value="#{gestionMatriculaController.idAlumno}">
+                        <f:selectItems itemValue="#{alumnos.idAlumno}" itemLabel="#{alumnos.nombreCompleto}" value="#{gestionMatriculaController.alumnosList}" var="alumnos"></f:selectItems>
+                    </p:selectOneMenu>
+                    <p:outputLabel for="grado" value="Grado: " class=" Responsive" ></p:outputLabel>
+                    <p:selectOneMenu id="grado" filter="true" filterMatchMode="contains" value="#{gestionMatriculaController.idGrado}" valueChangeListener="#{gestionMatriculaController.getSeccionesGrado}">
+                        <f:selectItems itemValue="#{grado.idGrado}" itemLabel="#{grado.grNombre}" value="#{gestionMatriculaController.gradosList}" var="grado"></f:selectItems>
+                        <p:ajax event="valueChange" update="seccion"/>
+                    </p:selectOneMenu>
+                    <p:outputLabel for="seccion" value="Sección del grado: " class="  Responsive"></p:outputLabel>
+                    <p:selectOneMenu id="seccion" value="#{gestionMatriculaController.idSeccion}">
+                        <f:selectItems itemValue="#{seccion.idSeccion}" itemLabel="#{seccion.scDescripcion}" value="#{gestionMatriculaController.seccionesList}" var="seccion"></f:selectItems>
+                    </p:selectOneMenu>
+                </p:panelGrid>
+                <div class="EmptyBox20"></div>
+                <div class="Container100">
+                    <p:commandButton value="Guardar" action="#{gestionMatriculaController.guardar()}" update="p1" />
+                    <p:commandButton value="Limpiar" immediate="true">
+                        <p:ajax update="p1" resetValues="true" />
+                    </p:commandButton>
+                    <div class="EmptyBox20"></div>
+                </div>
             </h:form>
         </p:panel>
     </ui:define>
