--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/editar.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/editar.xhtml
@@ -17,11 +17,49 @@
     <ui:define name="content">
         <div class="EmptyBox5"></div>
         <p:panel>
-            <h:form enctype="multipart/form-data" >
-                <p:dialog widgetVar="dlgAyuda1" modal="true" appendTo="@(body)" header="Ayuda">
-                    <p:outputLabel value="Esta ayuda sirve un monton Modifica"/>
-                </p:dialog>
-            </h:form>
+           <h:form>
+                    <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
+                        <p:outputLabel value="Esta ayuda sirve un monton"/>
+                    </p:dialog>
+                    <i class="icon-question Fs25 Red" style="cursor: pointer" onclick="PF('dlgAyuda').show();"></i>                    
+                    <div class="EmptyBox20"></div>
+                    <p:panelGrid columns="2" class="Container50 Responsive" id="mod_p1">
+                        <p:outputLabel for="mod_carnet" value="Carnet: " class=" Responsive"></p:outputLabel>
+                        <p:inputMask id="mod_carnet" mask="AA999999" value="#{gestionMatriculaController.matriculaModifica.mtCarnet}"></p:inputMask>
+                        <p:outputLabel for="mod_nombre" value="Nombre: " class=" Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="mod_nombre" filter="true" filterMatchMode="contains" value="#{gestionMatriculaController.idAlumnoModifica}">
+                            <f:selectItems itemValue="#{alumnos.idAlumno}" itemLabel="#{alumnos.nombreCompleto}" value="#{gestionMatriculaController.alumnosModificaList}" var="alumnos"></f:selectItems>
+                        </p:selectOneMenu>
+                        <p:outputLabel for="mod_grado" value="Grado: " class=" Responsive" ></p:outputLabel>
+                        <p:selectOneMenu id="mod_grado" filter="true" filterMatchMode="contains" value="#{gestionMatriculaController.idGradoModifica}" valueChangeListener="#{gestionMatriculaController.getSeccionesGradoModifica}">
+                            <f:selectItems itemValue="#{grado.idGrado}" itemLabel="#{grado.grNombre}" value="#{gestionMatriculaController.gradosModificaList}" var="grado"></f:selectItems>
+                            <p:ajax event="valueChange" update="mod_seccion"/>
+                        </p:selectOneMenu>
+                        <p:outputLabel for="mod_seccion" value="Sección del grado: " class="  Responsive"></p:outputLabel>
+                        <p:selectOneMenu id="mod_seccion" value="#{gestionMatriculaController.idSeccionModifica}">
+                            <f:selectItems itemValue="#{seccion.idSeccion}" itemLabel="#{seccion.scDescripcion}" value="#{gestionMatriculaController.seccionesModificaList}" var="seccion"></f:selectItems>
+                        </p:selectOneMenu>
+                    </p:panelGrid>
+                    <div class="EmptyBox20"></div>
+                    <div class="Container100 Responsive">
+                        <p:commandButton value="Guardar" action="#{gestionMatriculaController.guardarModifica()}" update="mod_p1" />
+                        <p:commandButton value="Limpiar" immediate="true">
+                            <p:ajax update="mod_p1" resetValues="true" />
+                        </p:commandButton>
+                        <p:commandButton value="Cancelar" immediate="true">
+                            <p:ajax update="mod_p1" resetValues="true" listener="#{gestionMatriculaController.setIndexMenu(0)}"/>
+                        </p:commandButton>
+                        <div class="EmptyBox20"></div>
+                        <p:splitButton value="Otras Opciones" action="#">
+                            <p:menuitem value="Gestionar Docentes">    
+                            </p:menuitem>
+                            <p:menuitem value="Gestionar Alumnos">    
+                            </p:menuitem>
+                            <p:menuitem value="Gestionar Cursos">    
+                            </p:menuitem>
+                        </p:splitButton>            
+                    </div>
+                </h:form>
         </p:panel>
     </ui:define>
 </ui:composition>
