--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/ver.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAnioEscolar/matricula/ver.xhtml
@@ -17,37 +17,44 @@
         <div class="EmptyBox5"></div>
         <p:panel>
             <h:form id="consultaForm">
-                <p:dialog widgetVar="dlgAyuda" modal="true" appendTo="@(body)" header="Ayuda">
-
+                <p:dialog widgetVar="dlgAyuda1" modal="true" appendTo="@(body)" header="Ayuda">
+                    <p:outputLabel value="Esta ayuda sirve un monton Modifica"/>
                 </p:dialog>
-
-
-
-                <div class="EmptyBox20"></div>
-                <p:panelGrid columns="2" class="Container50 Responsive" id="p1">
-                    <p:outputLabel for="carnet" value="Carnet: " class=" Responsive"></p:outputLabel>
-                    <p:inputMask id="carnet" mask="AA999999" value="#{gestionMatriculaController.matriculaNuevo.mtCarnet}"></p:inputMask>
-                    <p:outputLabel for="nombre" value="Nombre: " class=" Responsive"></p:outputLabel>
-                    <p:selectOneMenu id="nombre" filter="true" filterMatchMode="contains" value="#{gestionMatriculaController.idAlumno}">
-                        <f:selectItems itemValue="#{alumnos.idAlumno}" itemLabel="#{alumnos.nombreCompleto}" value="#{gestionMatriculaController.alumnosList}" var="alumnos"></f:selectItems>
-                    </p:selectOneMenu>
-                    <p:outputLabel for="grado" value="Grado: " class=" Responsive" ></p:outputLabel>
-                    <p:selectOneMenu id="grado" filter="true" filterMatchMode="contains" value="#{gestionMatriculaController.idGrado}" valueChangeListener="#{gestionMatriculaController.getSeccionesGrado}">
-                        <f:selectItems itemValue="#{grado.idGrado}" itemLabel="#{grado.grNombre}" value="#{gestionMatriculaController.gradosList}" var="grado"></f:selectItems>
-                        <p:ajax event="valueChange" update="seccion"/>
-                    </p:selectOneMenu>
-                    <p:outputLabel for="seccion" value="Sección del grado: " class="  Responsive"></p:outputLabel>
-                    <p:selectOneMenu id="seccion" value="#{gestionMatriculaController.idSeccion}">
-                        <f:selectItems itemValue="#{seccion.idSeccion}" itemLabel="#{seccion.scDescripcion}" value="#{gestionMatriculaController.seccionesList}" var="seccion"></f:selectItems>
-                    </p:selectOneMenu>
+                <p:remoteCommand name="redirect" actionListener="#{gestionMatriculaController.setIndexMenu(0)}"></p:remoteCommand>
+                <p:dialog widgetVar="dlgEliminar" header="Eliminar" modal="true">
+                    <p:outputLabel value="¿Está seguro de eliminar el registro?" class="TexAlCenter" ></p:outputLabel>
+                    <div class="EmptyBox20"></div>
+                    <p:commandButton value="Si" action="#{gestionMatriculaController.eliminarMatricula()}" update="consultaForm" oncomplete="PF('dlgEliminar').hide();redirect();"></p:commandButton>
+                    <p:commandButton value="No" onclick="PF('dlgEliminar').hide();" ></p:commandButton>
+                </p:dialog>
+                <p:panelGrid columns="2" class="Container50 Responsive" id="mod_p1">
+                    <p:outputLabel for="mod_carnet" value="Carnet: " class=" Responsive"></p:outputLabel>
+                    <p:outputLabel id="mod_carne" value="#{gestionMatriculaController.matriculaModifica.mtCarnet}"></p:outputLabel>
+                    <p:outputLabel for="mod_nombre" value="Nombre: " class=" Responsive"></p:outputLabel>
+                    <p:outputLabel id="mod_nombre" value="#{gestionMatriculaController.matriculaModifica.idAlumno.nombreCompleto}"></p:outputLabel>
+                    <p:outputLabel for="mod_grado" value="Grado: " class=" Responsive" ></p:outputLabel>
+                    <p:outputLabel id="mod_grado" value="#{gestionMatriculaController.matriculaModifica.idGrado.grNombre}"></p:outputLabel>
+                    <p:outputLabel for="mod_seccion" value="Sección del grado: " class="  Responsive"></p:outputLabel>
+                    <p:outputLabel id="mod_seccion" value="#{gestionMatriculaController.matriculaModifica.idSeccion.scDescripcion}"></p:outputLabel>                    
                 </p:panelGrid>
                 <div class="EmptyBox20"></div>
                 <div class="Container100">
-                    <p:commandButton value="Guardar" action="#{gestionMatriculaController.guardar()}" update="p1" />
-                    <p:commandButton value="Limpiar" immediate="true">
-                        <p:ajax update="p1" resetValues="true" />
+                    <p:commandButton value="Modificar" action="#{gestionMatriculaController.modificar(gestionMatriculaController.matriculaModifica)}" immediate="true" >
                     </p:commandButton>
-                    <div class="EmptyBox20"></div>
+                    <p:commandButton value="Eliminar" action="#{gestionMatriculaController.eliminar(gestionMatriculaController.matriculaModifica)}" onclick="PF('dlgEliminar').show();" immediate="true" >
+                    </p:commandButton>
+                    <p:commandButton value="Regresar" immediate="true">
+                        <p:ajax update="p1,fotoSubida" resetValues="true" listener="#{gestionMatriculaController.setIndexMenu(0)}"/>
+                    </p:commandButton>
+                    <p:commandButton id="otrasOpciones" value="Otras opciones" type="button" icon="ui-icon-extlink" />
+                    <p:tieredMenu overlay="true" trigger="otrasOpciones" my="left top" at="left bottom" style="width:200px">
+                        <p:menuitem value="Gestionar Docentes" >    
+                        </p:menuitem>
+                        <p:menuitem value="Gestionar Alumnos">    
+                        </p:menuitem>
+                        <p:menuitem value="Gestionar Cursos">    
+                        </p:menuitem>
+                    </p:tieredMenu>            
                 </div>
             </h:form>
         </p:panel>
