--- a/SIENI/SIENI-web/src/main/webapp/view/gestionAlumnos/expediente/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionAlumnos/expediente/index.xhtml
@@ -60,7 +60,7 @@
                     </p:column>
                 </p:dataTable>
                 <div class="EmptyBox20"></div>
-                <p:commandButton value="Registrar Alumno" action="#{gestionarAlumnosController.setIndexMenu(1)}"></p:commandButton>
+                <p:commandButton value="Adicionar Alumno" action="#{gestionarAlumnosController.setIndexMenu(1)}"></p:commandButton>
                 <p:commandButton value="Refrescar" action="#{gestionarAlumnosController.refresh()}" update="consulta"></p:commandButton>
             </h:form>
         </p:panel>
