--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionArchivosMultimedia/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionArchivosMultimedia/index.xhtml
@@ -55,7 +55,7 @@
                     </p:column>
                 </p:dataTable>
                 <div class="EmptyBox20"></div>
-                <p:commandButton value="Registrar Archivo Multimedia" action="#{gestionArchivoMultimediaController.setIndexMenu(1)}"></p:commandButton>
+                <p:commandButton value="Adicionar Archivo Multimedia" action="#{gestionArchivoMultimediaController.setIndexMenu(1)}"></p:commandButton>
                 <p:commandButton value="Refrescar" action="#{gestionArchivoMultimediaController.refresh()}" update="consulta"></p:commandButton>
             </h:form>
         </p:panel>
