--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionNotas/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionNotas/index.xhtml
@@ -59,7 +59,7 @@
                     </p:column>
                 </p:dataTable>
                 <div class="EmptyBox20"></div>
-                <p:commandButton value="Registrar Nota" actionListener="#{gestionNotaController.setIndexMenu(1)}"></p:commandButton>
+                <p:commandButton value="Adicionar Nota" actionListener="#{gestionNotaController.setIndexMenu(1)}"></p:commandButton>
                 <p:commandButton value="Refrescar" action="#{gestionNotaController.refresh()}" update="consulta"></p:commandButton>
             </h:form>
         </p:panel>
