--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionCompInteract/crear.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionCompInteract/crear.xhtml
@@ -10,7 +10,7 @@
             <p:menuitem value="Home" url="/"/>
             <p:menuitem value="Gestionar Curso" url="#"/> 
             <p:menuitem value="Gestionar Componentes Interactivos" url="#{siteUrls.componenteInteractiva}"/>
-            <p:menuitem value="Registrar Componente Interactivo" url="#"/>
+            <p:menuitem value="Adicionar Componente Interactivo" url="#"/>
             <p:separator />
         </p:breadCrumb>
         <i class="icon-question Fs25 Red Container2 ui-breadcrumb" style="cursor: pointer;" onclick="PF('dlgAyuda').show();"></i>
