--- a/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionNotas/crear.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/gestionCurso/gestionNotas/crear.xhtml
@@ -10,7 +10,7 @@
             <p:menuitem value="Home" url="/"/>
             <p:menuitem value="Gestionar Curso" url="#"/>
             <p:menuitem value="Gestionar Notas" url="#{siteUrls.gestionNota}"/>
-            <p:menuitem value="Registrar Nota" url="#"/>
+            <p:menuitem value="Adicionar Nota" url="#"/>
             <p:separator />
         </p:breadCrumb>
         <i class="icon-question Fs25 Red Container2 ui-breadcrumb" style="cursor: pointer;" onclick="PF('dlgAyuda').show();"></i>
