--- a/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpDocentes.jrxml
+++ b/SIENI/SIENI-web/src/main/webapp/resources/reportes/rtpDocentes.jrxml
@@ -2,11 +2,12 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="rptAlumnos" pageWidth="612" pageHeight="792" columnWidth="572" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="075ed306-8898-40c6-b065-aa7be29049d9">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="bd_sieni"/>
 	<property name="com.jaspersoft.studio.layout" value="com.jaspersoft.studio.editor.layout.HorizontalRowLayout"/>
-	<property name="ireport.zoom" value="1.0"/>
+	<property name="ireport.zoom" value="1.5"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
 	<parameter name="fechaGeneracion" class="java.lang.String"/>
-	<parameter name="anio" class="java.lang.String"/>
+	<parameter name="hasta" class="java.lang.String"/>
+	<parameter name="desde" class="java.lang.String"/>
 	<queryString>
 		<![CDATA[]]>
 	</queryString>
@@ -19,45 +20,62 @@
 		<band splitType="Stretch"/>
 	</background>
 	<title>
-		<band height="100" splitType="Stretch">
+		<band height="71" splitType="Stretch">
 			<staticText>
-				<reportElement x="180" y="1" width="205" height="30" uuid="6380fbb6-acf1-4bc4-9e77-3c16f32331f2"/>
+				<reportElement x="214" y="0" width="205" height="19" uuid="6380fbb6-acf1-4bc4-9e77-3c16f32331f2"/>
 				<textElement textAlignment="Center">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Centro Escolar San Ramón]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="180" y="31" width="205" height="30" uuid="b79a3114-94b7-4203-9a10-9c1efd94e65e"/>
+				<reportElement x="214" y="12" width="205" height="14" uuid="b79a3114-94b7-4203-9a10-9c1efd94e65e"/>
 				<textElement textAlignment="Center">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Reporte de Docentes]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="390" y="80" width="104" height="20" uuid="46e126d4-11a7-42e2-ba51-3128b20da3e3"/>
-				<text><![CDATA[Fecha de generación:]]></text>
+				<reportElement x="447" y="19" width="104" height="20" uuid="46e126d4-11a7-42e2-ba51-3128b20da3e3"/>
+				<text><![CDATA[F. Generación:]]></text>
 			</staticText>
 			<image>
 				<reportElement x="5" y="4" width="105" height="46" uuid="efe7bbf6-afb3-4970-a868-fac4475e6689"/>
 				<imageExpression><![CDATA["../images/mined.jpg"]]></imageExpression>
 			</image>
 			<staticText>
-				<reportElement x="24" y="78" width="40" height="20" uuid="8505d060-dbc4-422d-afcc-1c25c03e8c8c"/>
-				<text><![CDATA[Año:]]></text>
+				<reportElement x="110" y="50" width="40" height="20" uuid="8505d060-dbc4-422d-afcc-1c25c03e8c8c"/>
+				<text><![CDATA[Desde:]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="64" y="78" width="70" height="20" uuid="487c95c4-a502-48d4-a864-60530568f3f2"/>
-				<textFieldExpression><![CDATA[$P{anio}]]></textFieldExpression>
+				<reportElement x="447" y="7" width="80" height="20" uuid="93583e3c-92bc-43fa-81e1-09cda41bee25"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression><![CDATA["Pág. "+$V{PAGE_NUMBER}+" of"]]></textFieldExpression>
+			</textField>
+			<textField evaluationTime="Report">
+				<reportElement x="527" y="7" width="40" height="20" uuid="25ed0a8f-fcb5-404a-9104-576653ec13a7"/>
+				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="494" y="80" width="80" height="19" uuid="1a14dd55-a434-428d-a5b8-aee178745964"/>
+				<reportElement x="527" y="19" width="100" height="20" uuid="fc3eb40b-6b2e-47ed-b0d2-11cbcc092063"/>
 				<textFieldExpression><![CDATA[$P{fechaGeneracion}]]></textFieldExpression>
 			</textField>
+			<textField>
+				<reportElement x="296" y="51" width="100" height="20" uuid="d81dd0e1-a4d1-4ab8-8aca-47d446cc3555"/>
+				<textFieldExpression><![CDATA[$P{hasta}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="150" y="50" width="100" height="20" uuid="d108bdcd-fe91-4302-a088-bf3fda57b653"/>
+				<textFieldExpression><![CDATA[$P{desde}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="262" y="50" width="34" height="20" uuid="e5d279f2-6e18-4e6c-8118-05416760ef3f"/>
+				<text><![CDATA[Hasta:]]></text>
+			</staticText>
 		</band>
 	</title>
 	<columnHeader>
-		<band height="34" splitType="Stretch">
+		<band height="32" splitType="Stretch">
 			<staticText>
 				<reportElement x="24" y="2" width="110" height="30" uuid="530bda54-0aca-4464-a702-6f7435a107c2"/>
 				<box padding="1">
@@ -82,7 +100,7 @@
 				<textElement textAlignment="Center">
 					<font isBold="true"/>
 				</textElement>
-				<text><![CDATA[Fecha de nacimiento]]></text>
+				<text><![CDATA[F. Nacimiento]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="214" y="2" width="48" height="30" uuid="1069d5f3-cdc2-4f9c-950e-1de74d6d9623"/>
@@ -98,7 +116,7 @@
 				<text><![CDATA[Edad]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="262" y="2" width="140" height="30" uuid="f2207e9a-4870-47af-bfeb-f5ce1e4c4939"/>
+				<reportElement x="262" y="2" width="212" height="30" uuid="f2207e9a-4870-47af-bfeb-f5ce1e4c4939"/>
 				<box padding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -111,7 +129,7 @@
 				<text><![CDATA[Dirección]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="402" y="2" width="68" height="30" uuid="d6778a95-b1fe-4a1d-a65a-b0e6d799b2c7"/>
+				<reportElement x="474" y="2" width="98" height="30" uuid="d6778a95-b1fe-4a1d-a65a-b0e6d799b2c7"/>
 				<box padding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -128,7 +146,7 @@
 	<detail>
 		<band height="28" splitType="Stretch">
 			<textField>
-				<reportElement x="214" y="-2" width="48" height="30" uuid="2e5b58ec-11ed-4769-a89c-1db7b8553d42"/>
+				<reportElement x="214" y="0" width="48" height="28" uuid="2e5b58ec-11ed-4769-a89c-1db7b8553d42"/>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -139,7 +157,7 @@
 				<textFieldExpression><![CDATA[$F{edad}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="262" y="-2" width="140" height="30" uuid="2005aca6-dfaa-44ca-bb41-e909c8b78818"/>
+				<reportElement x="262" y="0" width="212" height="28" uuid="2005aca6-dfaa-44ca-bb41-e909c8b78818"/>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -149,7 +167,7 @@
 				<textFieldExpression><![CDATA[$F{direccion}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="402" y="-2" width="68" height="30" uuid="595e14ef-9c02-4b87-8cb0-be2dded3ff6c"/>
+				<reportElement x="474" y="0" width="98" height="28" uuid="595e14ef-9c02-4b87-8cb0-be2dded3ff6c"/>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -160,7 +178,7 @@
 				<textFieldExpression><![CDATA[$F{telefono}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="24" y="-2" width="110" height="30" uuid="86df671e-2b3c-481f-81a3-19cc7bdae722"/>
+				<reportElement x="24" y="0" width="110" height="28" uuid="86df671e-2b3c-481f-81a3-19cc7bdae722"/>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -170,7 +188,7 @@
 				<textFieldExpression><![CDATA[$F{docente}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="134" y="-2" width="80" height="30" uuid="41ec8b5b-0a04-4bc0-8357-049423460f7d"/>
+				<reportElement x="134" y="0" width="80" height="28" uuid="41ec8b5b-0a04-4bc0-8357-049423460f7d"/>
 				<box padding="1" topPadding="1" leftPadding="1" bottomPadding="1" rightPadding="1">
 					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
@@ -183,11 +201,9 @@
 		</band>
 	</detail>
 	<pageFooter>
-		<band height="36" splitType="Stretch">
-			<textField evaluationTime="Report">
-				<reportElement x="470" y="0" width="100" height="30" uuid="f3075a9e-7660-48b2-a57d-4195504227e3"/>
-				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
-			</textField>
-		</band>
+		<band height="36" splitType="Stretch"/>
 	</pageFooter>
+	<lastPageFooter>
+		<band height="50"/>
+	</lastPageFooter>
 </jasperReport>
