--- a/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteDocentes/index.xhtml
+++ b/SIENI/SIENI-web/src/main/webapp/view/rpt/reporteDocentes/index.xhtml
@@ -20,9 +20,12 @@
         <div class="EmptyBox5"></div>
         <h:form>            
             <p:panel>
-                <p:panelGrid columns="4">
-                    <p:outputLabel for="anio" value="Año Escolar:"></p:outputLabel>
-                    <p:inputText id="anio" value="#{rptAlumnosController.anioEscolar}"></p:inputText>
+                <p:panelGrid columns="5">
+                     <p:outputLabel for="desde" value="F. Desde: " class=" Responsive"></p:outputLabel>
+                     <p:calendar class="Container100" id="desde" value="#{rptDocentesController.desde}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha de inicio" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true"></p:calendar>
+                     <p:outputLabel for="hasta" value="F. Hasta: " class=" Responsive"></p:outputLabel>
+                     <p:calendar class="Container100" id="hasta" value="#{rptDocentesController.hasta}" mindate="#{dateUtils.fechaMinima}" maxdate="#{dateUtils.fechaActual}" mask="99/99/9999" pattern="dd/MM/yyyy" required="true" requiredMessage="Debe ingresar fecha de fin" placeholder="dd/mm/yyyy" yearRange="c-20:c+20" navigator="true"></p:calendar>
+                     <p:commandButton value="generar" actionListener="#{rptDocentesController.fill()}" update="consulta" ajax="true"></p:commandButton>
                 </p:panelGrid>
                 <div class="EmptyBox20"></div>
                 <p:dataTable id="consulta"  var="car" value="#{rptDocentesController.listDatos}" 
@@ -53,7 +56,7 @@
                             <f:selectItem itemValue="2" itemLabel="Excel" />
                             <f:selectItem itemValue="0" itemLabel="PDF" />
                         </p:selectOneRadio>
-                        <p:commandButton  value="Generar" ajax="false" actionListener="#{rptDocentesController.generarReporte()}"></p:commandButton>
+                        <p:commandButton  value="Exportar" ajax="false" actionListener="#{rptDocentesController.generarReporte()}"></p:commandButton>
                         <p:commandButton value="Refrescar" actionListener="#{rptDocentesController.refresh()}" update="consulta" ajax="true"></p:commandButton>
                     </h:panelGrid>
                 </div>
